[package]
name = "je-di"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Hierarchical dependency injection"

[dependencies]
async-trait = { version = "0.1.89", optional = true }
axum = { version = "0.8.6", optional = true }

[features]
axum = ["dep:axum", "async"]
async = ["dep:async-trait"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
async-trait = { version = "0.1.89" }
axum = { version = "0.8.6", features = ["macros"] }
